<resources>
    <string name="app_name" translatable="false">GO ON</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="email">Email</string>
    <string name="psd">Password</string>
    <string name="btn">Register</string>
    <string name="login">Login</string>
    <string name="google">"Google "</string>
    <string name="name">GO ON</string>
</resources>
