<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.Login.Login">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="176dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/email"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailTxt"
        android:layout_width="184dp"
        android:layout_height="48dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="email" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/psd"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/passTxt"
        android:layout_width="156dp"
        android:layout_height="34dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="password" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="292dp"
        android:layout_height="50dp"
        android:layout_marginTop="108dp"
        android:background="@android:color/holo_blue_light"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.579"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/btnReg"
        android:layout_width="291dp"
        android:layout_height="51dp"
        android:layout_marginStart="61dp"
        android:layout_marginLeft="61dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:background="@android:color/holo_blue_light"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/btn"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="289dp"
        android:layout_height="52dp"
        android:layout_marginTop="48dp"
        android:background="@android:color/holo_blue_light"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/google"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.574"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnReg" />
</androidx.constraintlayout.widget.ConstraintLayout>